Feat: added getAllPosts in backend and explore page on the frontend
